fix: Adjust spacing of list from GOV.UK Design System
This removes the spacing from the last item within the spaced list
in the Design System if it is nested within the summary list component.

Without this fix the spacing between the top and bottom of the row
is no longer even so this fix will correct that.

--- a/common/assets/scss/overrides/_govuk-frontend.scss
+++ b/common/assets/scss/overrides/_govuk-frontend.scss
@@ -5,3 +5,7 @@
 .govuk-radios__label {
   display: block;
 }
+
+.govuk-summary-list__value .govuk-list--spaced > li:last-child {
+  margin-bottom: 0;
+}
